crates/tiler-ir/tests/typed-handles/fail/retype.stderr
error[E0308]: mismatched types
 --> tests/typed-handles/fail/retype.rs:7:5
  |
6 | fn retype(value: Value<F32>) -> Value<External> {
  |                                 --------------- expected `tiler_ir::semantic::Value<External>` because of return type
7 |     value
  |     ^^^^^ expected `Value<External>`, found `Value<F32>`
  |
  = note: expected struct `Value<External>`
             found struct `Value<F32>`
